RESULTS/AutoSpec/raw_results/out-4o-numer-s/40_0003/40_merged.txt
/home/yangfp/AutoSpec/AutoSpec2/out/40_0003/40_merged.c:39:5: error: unterminated comment
   39 |     /*@;
      |     ^
